feat: add ui home

--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -27,7 +27,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="32dp"
-        android:contentDescription="@string/logo_bulila"
+        android:contentDescription="@string/logo_bulila_content_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvHeadline"
@@ -56,8 +56,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/gray"
         android:padding="16dp"
+        style="?attr/materialButtonOutlinedStyle"
         android:text="@string/show_data_penduduk"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
