--- a/app/src/main/res/layout/activity_kkocr.xml
+++ b/app/src/main/res/layout/activity_kkocr.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@color/placeholder_gray"
-        android:contentDescription="@string/preview_image_kk"
+        android:contentDescription="@string/image_kk_content_desc"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
