--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,17 +13,17 @@
         <item name="buttonBarNeutralButtonStyle">@style/Widget.App.Neutral.Button</item>
     </style>
 
-    <style name="Widget.App.Positive.Button" parent="Widget.Material3.Button.TextButton.Dialog">
-        <item name="android:textColor">@android:color/white</item>
+
+    <style name="Widget.App.Positive.Button" parent="Widget.Material3.Button.TextButton">
+        <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/green</item>
         <item name="shapeAppearance">@style/RoundShapeButton</item>
-    </style>
+   </style>
 
 
-    <style name="Widget.App.Neutral.Button" parent="Widget.Material3.Button.TextButton.Dialog">
+    <style name="Widget.App.Neutral.Button" parent="Widget.Material3.Button.OutlinedButton">
         <item name="android:textColor">@color/red</item>
         <item name="shapeAppearance">@style/RoundShapeButton</item>
-        <item name="buttonBarNeutralButtonStyle">?attr/materialIconButtonOutlinedStyle</item>
     </style>
 
 
