--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -14,12 +14,24 @@
         android:layout_marginEnd="32dp"
         android:text="@string/welcome"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
         android:textColor="@color/green"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/gHorizontal1" />
+
+    <TextView
+        android:id="@+id/tvSubHeadline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/name_placeholder"
+        android:textColor="@color/green"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/tvHeadline"
+        app:layout_constraintStart_toStartOf="@+id/tvHeadline"
+        app:layout_constraintTop_toBottomOf="@+id/tvHeadline" />
 
     <ImageView
         android:id="@+id/ivLogo"
@@ -29,7 +41,7 @@
         android:contentDescription="@string/logo_bulila_content_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvHeadline"
+        app:layout_constraintTop_toBottomOf="@+id/tvSubHeadline"
         app:srcCompat="@drawable/logo" />
 
     <com.google.android.material.button.MaterialButton
