--- a/app/src/main/res/layout/item_pin_auth.xml
+++ b/app/src/main/res/layout/item_pin_auth.xml
@@ -50,7 +50,7 @@
             card_view:layout_constraintTop_toBottomOf="@id/tvRole" />
 
         <EditText
-            android:id="@+id/EdtInputPin"
+            android:id="@+id/edtPin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -81,7 +81,7 @@
             android:textStyle="bold"
             card_view:layout_constraintEnd_toStartOf="@+id/btn2"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/EdtInputPin"
+            card_view:layout_constraintTop_toBottomOf="@+id/edtPin"
             card_view:shapeAppearance="@style/RoundShapeButton" />
 
         <Button
