--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/name_placeholder"
-        android:textColor="@color/green"
+        android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/tvHeadline"
@@ -45,7 +45,7 @@
         app:srcCompat="@drawable/logo" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnEditDataUser"
+        android:id="@+id/btnShowDataUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -53,7 +53,7 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/green"
         android:padding="16dp"
-        android:text="@string/edit_user"
+        android:text="@string/show_data_user"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEditDataUser"
+        app:layout_constraintTop_toBottomOf="@+id/btnShowDataUser"
         app:shapeAppearance="@style/RoundShapeButton" />
 
     <androidx.constraintlayout.widget.Guideline
