--- a/app/src/main/res/layout/content_user_list.xml
+++ b/app/src/main/res/layout/content_user_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvData"
+            android:id="@+id/rvDataUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
