--- a/app/src/main/res/layout/item_dialog_loading.xml
+++ b/app/src/main/res/layout/item_dialog_loading.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/loadingLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,14 +35,14 @@
                 android:id="@+id/tvHeadlineProgressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="@string/memproses_permintaan"
                 android:textColor="@color/green"
                 android:textSize="16sp"
-                card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
-                card_view:layout_constraintStart_toStartOf="@+id/progressBar"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
 
